			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

24-Jan-2004
~~~~~~~~~~~
Updated Dutch translation (Jan Wagemakers).

22-Jan-2004
~~~~~~~~~~~
Updated French translation (Vincent Lefèvre).

21-Jan-2004
~~~~~~~~~~~
Misc changes for next release.

18-Jan-2004
~~~~~~~~~~~
Accept Mozilla's alternative to the standard text/uri-list target during
drag-and-drop (Andrew Flegg).

07-Jan-2004
~~~~~~~~~~~
Bugfix: Icon shortcuts with out modifier keys didn't work if NumLock,
	CapsLock, etc were turned on (reported by Peter Geer).
Bugfix: Handle case when the output of uname -m contains spaces (Stephen 
	Watson, reported on #rox).

06-Jan-2004
~~~~~~~~~~~
Renamed some functions stolen from Gtk to avoid possible conflicts with
the Gtk-2.3 series (reported by Stu Tissimus).

20-Dec-2003
~~~~~~~~~~~
Make the Ctrl-button-3 menu pointer appear at the same place regardless
of the number of custom entries (Stephen Watson).

19-Dec-2003
~~~~~~~~~~~
Make Ctrl-button-3 open the menu slightly higher, so Delete isn't under the
pointer (suggested by Ryan Pavlik).

10-Dec-2003
~~~~~~~~~~~
Allow non image/* thumbnails in details mode. Label next to the combo 
in the Set Type action dialog is now "Type" and not "Command" (Stephen
Watson).

03-Dec-2003
~~~~~~~~~~~
Work out which include file we need for getxattr (Stephen Watson).

02-Dec-2003
~~~~~~~~~~~
Allow editing a symlink's target from the Properties box (Arnaud Calvo).
Experimental extended attributes support for setting MIME types (Stephen
Watson).

29-Nov-2003
~~~~~~~~~~~
More drag and drop fixes relating to escaped URI's (Stephen Watson).

23-Nov-2003
~~~~~~~~~~~
Added 'Specify the prefix' install option (Ryan Pavlik).
Updated Russian translation (Vladimir Popov).

20-Nov-2003
~~~~~~~~~~~
Bugfix: Cancelling the info window with a du process still running could
	crash the filer (reported by Peter Geer).

17-Nov-2003
~~~~~~~~~~~
Renamed 'Info' menu item to 'Properties'.

31-Oct-2003
~~~~~~~~~~~