@@ -7,8 +7,6 @@ when someone sends patches!).
 
 BUGS
 
-Possible race in du process when closing Properties box?
-
 Is setting thumbnailers from the Set Icon box sensible UI?
 
 
