@@ -468,11 +468,9 @@ static gboolean read_du_output(GIOChannel *source, GIOCondition cond, DU *du)
 	return FALSE;
 }
 
-/* XXX: possible race?: might still get output from process after freeing
- * everything. Should wait for EOF / close channel?
- */
 static void kill_du_output(GtkWidget *widget, DU *du)
 {
+	g_io_channel_shutdown(du->chan, FALSE, NULL);
 	g_io_channel_unref(du->chan);
 	kill((pid_t) du->child, SIGTERM);
 	g_object_unref(G_OBJECT(du->store));
