@@ -4,6 +4,7 @@
 
 24-Jan-2004
 ~~~~~~~~~~~
+Updated French manual translation (Arnaud Calvo).
 Updated Dutch translation (Jan Wagemakers).
 
 22-Jan-2004
